--- a/EXERCICIOS/ex022/fundo006.html
+++ b/EXERCICIOS/ex022/fundo006.html
@@ -3,26 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fundo fixo de tela </title>
     <style>
 
         body{
             height: 96vh;
-            background-color: black;
+           /* background-color: black;
             background-image: url(imagem/wallpaper002.jpg);
             background-position: center center ;
-            background-repeat: repeat-y;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            background:  black url(imagem/wallpaper002.jpg) center center no-repeat  fixed ;
             background-size: cover;
         }
         main{
 
             background-color: white;
-            width: 400px;
+             max-width: 700px;
             margin: auto;
             padding: 10px;
             border-radius: 15px ;
             border: 1px solid darkblue;
-        }
+           
 
 
 
